Configurado el auto-update
Configurado el auto update con el nuevo nombre de theme

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- * Theme Name: Podemos Wordpress Theme
+ * Theme Name: podemos-wordpress-default-master
  * Theme URI: http://webdesign4pros.com
  * Theme Description: Template para Podemos
  * Author: Gregor Hartmaier (Webdesign4Pros)
