--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  * Theme Description: Template para Podemos
  * Author: Gregor Hartmaier (Webdesign4Pros)
  * Author URI: http://webdesign4pros.com/
- * Version: 1.21
+ * Version: 1.22
  * Tags: twitter, bootstrap, podemos, círculos
  * License: license.txt
  * License URI:
@@ -217,6 +217,111 @@ ul.nav li.dropdown:hover ul.dropdown-menu {
 .navbar ul.nav li.dropdown:hover ul.dropdown-menu li.active a {
 	background-color: #954e99;
 }
+
+
+/* Sidebars */ 
+
+.sidebar-posts .textwidget, .sidebar-page .textwidget {
+padding-left: 0px!important;
+}
+
+.sidebar-page {
+margin-top: 100px;
+}
+
+div.sidebar-wrapper, div.col-3.sidebar-wrapper {
+min-height:500px!important;
+}
+
+/* Contradiciendo Bootstrap Responsive */ 
+
+@media (min-width: 1200px) {
+
+
+div.col-lg-9 {
+width: 67%;
+}
+
+div.col-lg-3 {
+width: 33%;
+}
+
+}
+
+@media (min-width: 992px) {
+
+.aparece {
+width:100%;
+float:left;
+display:none;
+}
+
+.desaparece {
+display:block;
+}
+
+div.footer div.col-md-3.bar-col {
+width: 33%;
+}
+
+div.footer div.col-md-3 {
+width:22.3%;
+}
+
+div.col-md-3 {
+width: 33%;
+}
+
+.col-md-9 {
+width: 67%;
+}
+
+}
+
+@media (max-width: 992px) {
+
+.sidebar-wrapper ul {
+padding-left: 0px!important;
+}
+
+aside {
+text-align:center;
+}
+
+aside.entry-details {
+text-align:left;
+}
+
+aside li {
+list-style:none;
+text-align:center;
+}
+
+div.aparece {
+display:block;
+}
+
+div.desaparece {
+display:none;
+}
+
+div.col-sm-3 {
+width: 100%;
+}
+
+.col-sm-9 {
+width: 100%;
+}
+
+}
+
+/* Fondo de página */ 
+
+div.main-content {
+background:#fff;
+background-color:#fff;
+}
+
 /* Top Header */ 
 
 .img-responsive {
