--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
  * Theme Name: podemos-wordpress-default-master
  * Theme URI: http://webdesign4pros.com
  * Theme Description: Template para Podemos
- * Author: Gregor Hartmaier (Webdesign4Pros), David Varela (Lycaweb) 
+ * Author: Gregor Hartmaier (Webdesign4Pros)
  * Author URI: http://webdesign4pros.com/
  * Version: 1.23
  * Tags: twitter, bootstrap, podemos, círculos
