Solución problemas de fuentes
La carga de la web se retrasaba unos 5 segundos por este error en ellas
cargas de las fuentes.
Aunque en url funciona en style css no funciona cargar dos fuentes
concatenadas, La actualización del theme automática no funciona, por
eso no cambio en este commit el número de versión

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 /* Apply bootstrap styles */
 
  @import url('bootstrap/css/bootstrap.min.css');
- @import url(http://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Anaheim);
+ @import url(http://fonts.googleapis.com/css?family=Alegreya+Sans+SC);
  @import url(http://fonts.googleapis.com/css?family=Anaheim);
 @font-face {
 	font-family: 'Alegreya Sans SC';
